Fix browser crash when expandable items are off screen (#250)

--- a/src/components/tree-view/tree-view-item/tree-view-item.scss
+++ b/src/components/tree-view/tree-view-item/tree-view-item.scss
@@ -85,8 +85,6 @@
   block-size: var(--ch-tree-view-item__expandable-button-size);
   z-index: 1;
   cursor: pointer;
-  content-visibility: auto;
-  contain-intrinsic-size: auto var(--ch-tree-view-item__expandable-button-size);
 }
 
 .expandable-button {
